added 'js' language to all examples with "model.json" file.

--- a/hard-coded/chart-types/bar/bar-marker-array/config.json
+++ b/hard-coded/chart-types/bar/bar-marker-array/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python",
-        "nodejs",
-        "r",
-        "matlab",
-        "julia"
-    ],
-    "name": "Customizing Individual Bar Colors"
+  "languages": [
+    "python", 
+    "nodejs", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "js"
+  ], 
+  "name": "Customizing Individual Bar Colors"
 }
