--- a/hard-coded/chart-types/histogram/overlaid-histogram/config.json
+++ b/hard-coded/chart-types/histogram/overlaid-histogram/config.json
@@ -1,11 +1,12 @@
 {
-    "languages": [
-        "python",
-        "r",
-        "matlab",
-        "julia",
-        "nodejs"
-    ],
-    "init": true,
-    "name": "Overlaid Histgram"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "init": true, 
+  "name": "Overlaid Histgram"
 }
