--- a/hard-coded/chart-types/line_and_scatter/basic-line/config.json
+++ b/hard-coded/chart-types/line_and_scatter/basic-line/config.json
@@ -1,9 +1,10 @@
 {
-    "languages": [
-        "python", 
-        "r", 
-        "julia", 
-        "nodejs"
-    ], 
-    "name": "Basic Line Plot"
+  "languages": [
+    "python", 
+    "r", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "Basic Line Plot"
 }
