--- a/hard-coded/chart-types/line_and_scatter/line-style/config.json
+++ b/hard-coded/chart-types/line_and_scatter/line-style/config.json
@@ -1,9 +1,10 @@
 {
-    "languages": [
-        "python",
-        "r",
-        "julia",
-        "nodejs"
-    ],
-    "name": "Colored and Styled Scatter Plot"
+  "languages": [
+    "python", 
+    "r", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "Colored and Styled Scatter Plot"
 }
