--- a/hard-coded/chart-types/time-series/python-datetime/config.json
+++ b/hard-coded/chart-types/time-series/python-datetime/config.json
@@ -1,7 +1,8 @@
 {
-    "languages": [
-        "python"
-    ],
-    "name": "Time Series Plot with <code>datetime</code> Objects",
-    "init": true
+  "languages": [
+    "python", 
+    "js"
+  ], 
+  "init": true, 
+  "name": "Time Series Plot with <code>datetime</code> Objects"
 }
