--- a/hard-coded/exlusive-embedding/iframes-exlusive/iframes-exclusive/config.json
+++ b/hard-coded/exlusive-embedding/iframes-exlusive/iframes-exclusive/config.json
@@ -1,7 +1,8 @@
 {
-    "languages": [
-        "ggplot2",
-        "matplotlib"
-    ],
-    "name": ""
+  "languages": [
+    "ggplot2", 
+    "matplotlib", 
+    "js"
+  ], 
+  "name": ""
 }
