--- a/hard-coded/get-requests-and-images/get-requests/get-requests-example/config.json
+++ b/hard-coded/get-requests-and-images/get-requests/get-requests-example/config.json
@@ -1,8 +1,9 @@
 {
-    "languages": [
-        "nodejs",
-        "r",
-        "matlab"
-    ],
-    "name": "Get Requests"
+  "languages": [
+    "nodejs", 
+    "r", 
+    "matlab", 
+    "js"
+  ], 
+  "name": "Get Requests"
 }
