--- a/hard-coded/get-requests-and-images/static-image-matlab/static-image-example-matlab/config.json
+++ b/hard-coded/get-requests-and-images/static-image-matlab/static-image-example-matlab/config.json
@@ -1,6 +1,7 @@
 {
-    "languages": [
-        "matlab"
-    ],
-    "name": "Static Image Export"
+  "languages": [
+    "matlab", 
+    "js"
+  ], 
+  "name": "Static Image Export"
 }
