--- a/hard-coded/get-requests-and-images/static-image/static-image-example/config.json
+++ b/hard-coded/get-requests-and-images/static-image/static-image-example/config.json
@@ -1,7 +1,8 @@
 {
-    "languages": [
-        "python",
-        "nodejs"
-    ],
-    "name": "Static Image Export"
+  "languages": [
+    "python", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "Static Image Export"
 }
