--- a/hard-coded/multiple-axes-insets-subplots/multiple-axes/multiple-axes-multiple/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/multiple-axes/multiple-axes-multiple/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python",
-        "r",
-        "julia",
-        "nodejs",
-        "matlab"
-    ],
-    "name": "Multiple Y-Axes"
+  "languages": [
+    "python", 
+    "r", 
+    "julia", 
+    "nodejs", 
+    "matlab", 
+    "js"
+  ], 
+  "name": "Multiple Y-Axes"
 }
