--- a/hard-coded/multiple-axes-insets-subplots/subplots/shared-axes-subplots/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/subplots/shared-axes-subplots/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python", 
-        "r", 
-        "matlab", 
-        "julia", 
-        "nodejs"
-    ], 
-    "name": "Subplots with Shared Axes"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "Subplots with Shared Axes"
 }
