--- a/hard-coded/multiple-axes-insets-subplots/subplots/stacked-coupled-subplots/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/subplots/stacked-coupled-subplots/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python", 
-        "r", 
-        "matlab", 
-        "julia", 
-        "nodejs"
-    ], 
-    "name": "Stacked Subplots with a Shared X-Axis"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "Stacked Subplots with a Shared X-Axis"
 }
