--- a/hard-coded/streaming/streaming-subsection-placeholder/streaming-example-placeholder/config.json
+++ b/hard-coded/streaming/streaming-subsection-placeholder/streaming-example-placeholder/config.json
@@ -1,6 +1,7 @@
 {
-    "languages": [
-        "python"
-    ],
-    "name": "Streaming Example Placeholder"
+  "languages": [
+    "python", 
+    "js"
+  ], 
+  "name": "Streaming Example Placeholder"
 }
