--- a/hard-coded/chart-types/box/basic-box-plot/config.json
+++ b/hard-coded/chart-types/box/basic-box-plot/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python", 
-        "r", 
-        "julia", 
-        "nodejs"
-    ], 
-    "init": true, 
-    "name": "Basic Box Plot"
+  "languages": [
+    "python", 
+    "r", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "init": true, 
+  "name": "Basic Box Plot"
 }
