--- a/hard-coded/chart-types/box/box-plot-jitter/config.json
+++ b/hard-coded/chart-types/box/box-plot-jitter/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python", 
-        "r", 
-        "matlab", 
-        "julia", 
-        "nodejs"
-    ], 
-    "name": "Box Plot That Displays the Underlying Data"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "Box Plot That Displays the Underlying Data"
 }
