--- a/hard-coded/chart-types/error-bar/error-bar-horizontal/config.json
+++ b/hard-coded/chart-types/error-bar/error-bar-horizontal/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python", 
-        "r", 
-        "matlab", 
-        "julia", 
-        "nodejs"
-    ], 
-    "name": "Horizontal Error Bars"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "Horizontal Error Bars"
 }
