--- a/hard-coded/chart-types/error-bar/error-bar-style/config.json
+++ b/hard-coded/chart-types/error-bar/error-bar-style/config.json
@@ -1,11 +1,12 @@
 {
-    "languages": [
-        "python", 
-        "r", 
-        "matlab", 
-        "julia", 
-        "nodejs"
-    ], 
-    "init": true, 
-    "name": "Colored and Styled Error Bars"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "init": true, 
+  "name": "Colored and Styled Error Bars"
 }
