--- a/hard-coded/chart-types/histogram/style-histogram/config.json
+++ b/hard-coded/chart-types/histogram/style-histogram/config.json
@@ -1,11 +1,12 @@
 {
-    "languages": [
-        "python", 
-        "r", 
-        "matlab", 
-        "julia", 
-        "nodejs"
-    ], 
-    "init": true, 
-    "name": "Colored and Styled Histograms"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "init": true, 
+  "name": "Colored and Styled Histograms"
 }
