--- a/hard-coded/chart-types/line_exclusive/basic-line2/config.json
+++ b/hard-coded/chart-types/line_exclusive/basic-line2/config.json
@@ -1,6 +1,7 @@
 {
-    "languages": [
-        "matlab"
-    ],
-    "name": "Basic Line Plot"
+  "languages": [
+    "matlab", 
+    "js"
+  ], 
+  "name": "Basic Line Plot"
 }
