--- a/hard-coded/file-settings/fileopt/overwrite/config.json
+++ b/hard-coded/file-settings/fileopt/overwrite/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "matlab",
-        "r",
-        "nodejs",
-        "python",
-        "julia"
-    ],
-    "name": "Overwriting existing files"
+  "languages": [
+    "matlab", 
+    "r", 
+    "nodejs", 
+    "python", 
+    "julia", 
+    "js"
+  ], 
+  "name": "Overwriting existing files"
 }
