--- a/hard-coded/file-settings/privacy/privacy-false/config.json
+++ b/hard-coded/file-settings/privacy/privacy-false/config.json
@@ -1,13 +1,14 @@
 {
-    "languages": [
-        "python", 
-        "r", 
-        "matlab", 
-        "julia", 
-        "nodejs"
-    ], 
-    "plot-options": {
-        "world_readable": false
-    }, 
-    "name": "Private Graphs"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "plot-options": {
+    "world_readable": false
+  }, 
+  "name": "Private Graphs"
 }
