--- a/hard-coded/layout/annotations/text-chart-basic/config.json
+++ b/hard-coded/layout/annotations/text-chart-basic/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python", 
-        "r", 
-        "matlab", 
-        "julia", 
-        "nodejs"
-    ], 
-    "name": "Adding Text to Data in Line Plots"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "Adding Text to Data in Line Plots"
 }
