--- a/hard-coded/layout/axes/axes-booleans/config.json
+++ b/hard-coded/layout/axes/axes-booleans/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python",
-        "r",
-        "matlab",
-        "julia",
-        "nodejs"
-    ],
-    "name": "Toggling Axes Lines, Ticks, Labels, and Autorange"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "Toggling Axes Lines, Ticks, Labels, and Autorange"
 }
