--- a/hard-coded/layout/axes/axes-range-manual/config.json
+++ b/hard-coded/layout/axes/axes-range-manual/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python",
-        "r",
-        "matlab",
-        "julia",
-        "nodejs"
-    ],
-    "name": "Setting the Range of Axes Manually"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "Setting the Range of Axes Manually"
 }
