--- a/hard-coded/layout/axes/axes-range-mode/config.json
+++ b/hard-coded/layout/axes/axes-range-mode/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python",
-        "r",
-        "matlab",
-        "julia",
-        "nodejs"
-    ],
-    "name": "<code>nonnegative</code>, <code>tozero</code>, and <code>normal</code> Rangemode"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "<code>nonnegative</code>, <code>tozero</code>, and <code>normal</code> Rangemode"
 }
