--- a/hard-coded/layout/sizing/size-margins/config.json
+++ b/hard-coded/layout/sizing/size-margins/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python",
-        "r",
-        "matlab",
-        "julia",
-        "nodejs"
-    ],
-    "name": "Adjusting Height, Width, and Margins"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "Adjusting Height, Width, and Margins"
 }
