--- a/hard-coded/multiple-axes-insets-subplots/insets/simple-inset/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/insets/simple-inset/config.json
@@ -1,10 +1,11 @@
 {
-    "languages": [
-        "python",
-        "r",
-        "matlab",
-        "julia",
-        "nodejs"
-    ],
-    "name": "Simple Inset Graph"
+  "languages": [
+    "python", 
+    "r", 
+    "matlab", 
+    "julia", 
+    "nodejs", 
+    "js"
+  ], 
+  "name": "Simple Inset Graph"
 }
