updated configs with better names, then run/published changes.

--- a/hard-coded/chart-types/bubble/mpl-bubble-colormap/config.json
+++ b/hard-coded/chart-types/bubble/mpl-bubble-colormap/config.json
@@ -1,4 +1,4 @@
 {
-  "name": "Matplotlib bubble using colormap (cmap)",
+  "name": "Matplotlib Bubble Chart using Colormap (<code>cmap</code>)",
   "languages": ["matplotlib"]
 }
