--- a/hard-coded/chart-types/bubble/mpl-7d-bubble/config.json
+++ b/hard-coded/chart-types/bubble/mpl-7d-bubble/config.json
@@ -1,4 +1,4 @@
 {
-  "name": "Matplotlib bubble with edgewidth, linewidth, and alpha dimensions",
+  "name": "Matplotlib Bubble Chart with <code>edgecolor</code>, <code>linewidth</code>,<br>and Opacity Dimensions",
   "languages": ["matplotlib"]
 }
