--- a/hard-coded/chart-types/line_and_scatter/config.json
+++ b/hard-coded/chart-types/line_and_scatter/config.json
@@ -5,5 +5,5 @@
     "description": "How to make line and scatter plots in {language}. {num_examples} examples of basic and colored line and scatter plots.",
     "order": ["matlab-line-and-scatter-basic",
               "gg-basic-line", "gg-basic-scatter", "gg-line-scatter", "gg-alpha",
-              "basic-line", "line-scatter", "line-style"]
+              "basic-line", "line-scatter", "line-style", "line-shapes"]
 }
