change num_examples to num_categories

--- a/hard-coded/chart-types/box/config.json
+++ b/hard-coded/chart-types/box/config.json
@@ -3,5 +3,5 @@
     "name": "Box Plots",
     "relative_url": "box-plots",
     "order": ["matlab-basic-box-plot", "basic-box-plot", "box-plot-jitter", "box-grouped"],
-    "description": "How to make a box plot in {language}. {num_examples} examples of box plots in {language} that are grouped, colored, and display the underlying data distribution."
+    "description": "How to make a box plot in {language}. {num_categories} examples of box plots in {language} that are grouped, colored, and display the underlying data distribution."
 }
