--- a/hard-coded/chart-types/error-bar/config.json
+++ b/hard-coded/chart-types/error-bar/config.json
@@ -10,5 +10,5 @@
               "error-bar-style",
               "percent-error-bar",
               "error-bar-asymmetric-constant"],
-    "description": "How to add error bars to a line, scatter, or bar chart. {num_examples} examples of symmetric, asymmetric, horizontal, and colored error bars."
+    "description": "How to add error bars to a line, scatter, or bar chart. {num_categories} examples of symmetric, asymmetric, horizontal, and colored error bars."
 }
