--- a/hard-coded/chart-types/heatmap/config.json
+++ b/hard-coded/chart-types/heatmap/config.json
@@ -18,5 +18,5 @@
               "Jet-colorscale",
               "Picnic-colorscale",
               "RdBu-colorscale"],
-    "description": "How to make a heatmap in {language} with a matrix. {num_examples} examples of colored and labeled heatmaps with custom colorscales."
+    "description": "How to make a heatmap in {language} with a matrix. {num_categories} examples of colored and labeled heatmaps with custom colorscales."
 }
