--- a/hard-coded/layout/axes/config.json
+++ b/hard-coded/layout/axes/config.json
@@ -2,5 +2,5 @@
     "has_thumbnail": false,
     "name": "Axes",
     "relative_url": "axes",
-    "description": "How to adjust axes properties in {language}. {num_examples} examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines."
+    "description": "How to adjust axes properties in {language}. {num_categories} examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines."
 }
