--- a/hard-coded/layout/legends/config.json
+++ b/hard-coded/layout/legends/config.json
@@ -2,6 +2,6 @@
     "has_thumbnail": false,
     "name": "Legends",
     "relative_url": "legend",
-    "description": "How to modify the legend in {language} graphs. {num_examples} examples of how to move, color, and hide the legend.",
+    "description": "How to modify the legend in {language} graphs. {num_categories} examples of how to move, color, and hide the legend.",
     "order": [ "matlab-legend-inside","matlab-legend-outside","legend-visibility", "data-visibility", "legend-labels","legend-inside","legend-outside", "legend-style"]
 }
