--- a/hard-coded/chart-types/line_and_scatter/config.json
+++ b/hard-coded/chart-types/line_and_scatter/config.json
@@ -2,7 +2,7 @@
     "has_thumbnail": true,
     "name": "Line and Scatter Plots",
     "relative_url": "line-and-scatter",
-    "description": "How to make line and scatter plots in {language}. {num_examples} examples of basic and colored line and scatter plots.",
+    "description": "How to make line and scatter plots in {language}. {num_categories} examples of basic and colored line and scatter plots.",
     "order": ["matlab-line-and-scatter-basic",
               "gg-basic-line", "gg-basic-scatter", "gg-line-scatter", "gg-alpha",
               "basic-line", "line-scatter", "line-style", "line-shapes"]
