--- a/hard-coded/layout/annotations/text-chart-basic/config.json
+++ b/hard-coded/layout/annotations/text-chart-basic/config.json
@@ -1,11 +1,11 @@
 {
   "languages": [
-    "python", 
-    "r", 
-    "matlab", 
-    "julia", 
-    "nodejs", 
+    "python",
+    "r",
+    "matlab",
+    "julia",
+    "nodejs",
     "js"
-  ], 
-  "name": "Adding Text to Data in Line Plots"
+  ],
+  "name": "Adding Text to Data in Line and Scatter Plots"
 }
