--- a/hard-coded/layout/annotations/config.json
+++ b/hard-coded/layout/annotations/config.json
@@ -3,5 +3,5 @@
     "name": "Text and Annotations",
     "relative_url": "text-and-annotations",
     "description": "How to add text labels and annotations to plots in {language}.",
-    "order": ["matlab-text-chart-basic", "text-chart-basic", "simple-annotation", "multiple-annotation", "text-chart-styling"]
+    "order": ["matlab-text-chart-basic", "text-chart-basic", "hover-chart-basic", "simple-annotation", "multiple-annotation", "text-chart-styling"]
 }
