split up shiny-r and shiny-ggplot2

--- a/hard-coded/exlusive-embedding/shiny-ggplot2/config.json
+++ b/hard-coded/exlusive-embedding/shiny-ggplot2/config.json
@@ -1,5 +1,5 @@
 {
     "has_thumbnail": false,
-    "name": "Shiny",
+    "name": "Getting Started with Shiny and Plotly",
     "relative_url": "shiny-tutorial"
 }
