Switch nodejs -> node_js

--- a/hard-coded/chart-types/bar/bar-with-hover-text/config.json
+++ b/hard-coded/chart-types/bar/bar-with-hover-text/config.json
@@ -1,10 +1,1 @@
-{
-    "languages": [
-        "python",
-        "nodejs",
-        "r",
-        "matlab",
-        "julia"
-    ],
-    "name": "Bar Chart with Hover Text"
-}
+{"languages": ["python", "r", "matlab", "julia", "node_js"], "name": "Bar Chart with Hover Text"}
