--- a/hard-coded/chart-types/contour/2dhistogram-contour-subplots/config.json
+++ b/hard-coded/chart-types/contour/2dhistogram-contour-subplots/config.json
@@ -1,12 +1,1 @@
-{
-  "languages": [
-    "python", 
-    "r", 
-    "matlab", 
-    "julia", 
-    "nodejs", 
-    "js"
-  ], 
-  "init": true, 
-  "name": "2D Histogram Contour Plot <br>with Histogram Subplots"
-}
+{"languages": ["python", "r", "matlab", "julia", "js", "node_js"], "init": true, "name": "2D Histogram Contour Plot <br>with Histogram Subplots"}
