--- a/hard-coded/chart-types/mixed/contour-scatter/config.json
+++ b/hard-coded/chart-types/mixed/contour-scatter/config.json
@@ -1,11 +1,1 @@
-{
-  "languages": [
-    "python", 
-    "matlab", 
-    "r", 
-    "julia", 
-    "nodejs", 
-    "js"
-  ], 
-  "name": "A Contour and Scatter Plot <br>of the Method of Steepest Descent"
-}
+{"languages": ["python", "matlab", "r", "julia", "js", "node_js"], "name": "A Contour and Scatter Plot <br>of the Method of Steepest Descent"}
