--- a/hard-coded/layout/annotations/text-chart-basic/config.json
+++ b/hard-coded/layout/annotations/text-chart-basic/config.json
@@ -1,11 +1,1 @@
-{
-  "languages": [
-    "python",
-    "r",
-    "matlab",
-    "julia",
-    "nodejs",
-    "js"
-  ],
-  "name": "Adding Text to Data in Line and Scatter Plots"
-}
+{"languages": ["python", "r", "matlab", "julia", "js", "node_js"], "name": "Adding Text to Data in Line and Scatter Plots"}
