--- a/hard-coded/layout/axes/axes-booleans/config.json
+++ b/hard-coded/layout/axes/axes-booleans/config.json
@@ -1,11 +1,1 @@
-{
-  "languages": [
-    "python", 
-    "r", 
-    "matlab", 
-    "julia", 
-    "nodejs", 
-    "js"
-  ], 
-  "name": "Toggling Axes Lines, Ticks, Labels, and Autorange"
-}
+{"languages": ["python", "r", "matlab", "julia", "js", "node_js"], "name": "Toggling Axes Lines, Ticks, Labels, and Autorange"}
