--- a/hard-coded/multiple-axes-insets-subplots/multiple-axes/multiple-axes-double/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/multiple-axes/multiple-axes-double/config.json
@@ -1,11 +1,1 @@
-{
-  "languages": [
-    "python", 
-    "r", 
-    "julia", 
-    "nodejs", 
-    "matlab", 
-    "js"
-  ], 
-  "name": "Two Y-Axes"
-}
+{"languages": ["python", "r", "julia", "matlab", "js", "node_js"], "name": "Two Y-Axes"}
