--- a/hard-coded/chart-types/bar/basic-bar/config.json
+++ b/hard-coded/chart-types/bar/basic-bar/config.json
@@ -1,11 +1,1 @@
-{
-  "languages": [
-    "python", 
-    "nodejs", 
-    "r", 
-    "matlab", 
-    "julia", 
-    "js"
-  ], 
-  "name": "Basic Bar Chart"
-}
+{"languages": ["python", "r", "matlab", "julia", "js", "node_js"], "name": "Basic Bar Chart"}
