--- a/hard-coded/chart-types/box/box-grouped/config.json
+++ b/hard-coded/chart-types/box/box-grouped/config.json
@@ -1,12 +1,1 @@
-{
-  "languages": [
-    "python", 
-    "r", 
-    "matlab", 
-    "julia", 
-    "nodejs", 
-    "js"
-  ], 
-  "init": true, 
-  "name": "Grouped Box Plot"
-}
+{"languages": ["python", "r", "matlab", "julia", "js", "node_js"], "init": true, "name": "Grouped Box Plot"}
