--- a/hard-coded/chart-types/error-bar/error-bar-asymmetric-constant/config.json
+++ b/hard-coded/chart-types/error-bar/error-bar-asymmetric-constant/config.json
@@ -1,11 +1,1 @@
-{
-  "languages": [
-    "python", 
-    "r", 
-    "matlab", 
-    "julia", 
-    "nodejs", 
-    "js"
-  ], 
-  "name": "Asymmetric Error Bars with a Constant Offset"
-}
+{"languages": ["python", "r", "matlab", "julia", "js", "node_js"], "name": "Asymmetric Error Bars with a Constant Offset"}
