--- a/hard-coded/chart-types/heatmap/YIOrRd-heatmap/config.json
+++ b/hard-coded/chart-types/heatmap/YIOrRd-heatmap/config.json
@@ -1,11 +1,1 @@
-{
-  "languages": [
-    "python",
-    "r",
-    "matlab",
-    "julia",
-    "nodejs",
-    "js"
-  ],
-  "name": "YIOrRd Heatmap"
-}
+{"languages": ["python", "r", "matlab", "julia", "js", "node_js"], "name": "YIOrRd Heatmap"}
