--- a/hard-coded/chart-types/line_and_scatter/line-shapes/config.json
+++ b/hard-coded/chart-types/line_and_scatter/line-shapes/config.json
@@ -1,10 +1,1 @@
-{
-  "languages": [
-    "python", 
-    "r", 
-    "julia", 
-    "nodejs", 
-    "js"
-  ], 
-  "name": "Line Shape Options for Interpolation"
-}
+{"languages": ["python", "r", "julia", "js", "node_js"], "name": "Line Shape Options for Interpolation"}
