--- a/hard-coded/file-settings/fileopt/overwrite/config.json
+++ b/hard-coded/file-settings/fileopt/overwrite/config.json
@@ -1,10 +1,1 @@
-{
-  "languages": [
-    "matlab",
-    "r",
-    "nodejs",
-    "python",
-    "julia"
-  ],
-  "name": "Overwriting existing files"
-}
+{"languages": ["matlab", "r", "python", "julia", "node_js"], "name": "Overwriting existing files"}
