--- a/hard-coded/file-settings/privacy/privacy-false/config.json
+++ b/hard-coded/file-settings/privacy/privacy-false/config.json
@@ -1,13 +1,1 @@
-{
-  "languages": [
-    "python",
-    "r",
-    "matlab",
-    "julia",
-    "nodejs"
-  ],
-  "plot-options": {
-    "world_readable": false
-  },
-  "name": "Private Graphs"
-}
+{"languages": ["python", "r", "matlab", "julia", "node_js"], "plot-options": {"world_readable": false}, "name": "Private Graphs"}
