--- a/hard-coded/get-requests-and-images/get-requests/get-requests-example/config.json
+++ b/hard-coded/get-requests-and-images/get-requests/get-requests-example/config.json
@@ -1,8 +1,1 @@
-{
-  "languages": [
-    "nodejs",
-    "r",
-    "matlab"
-  ],
-  "name": "Get Requests"
-}
+{"languages": ["r", "matlab", "node_js"], "name": "Get Requests"}
