--- a/hard-coded/get-requests-and-images/iframes/iframes/config.json
+++ b/hard-coded/get-requests-and-images/iframes/iframes/config.json
@@ -1,10 +1,1 @@
-{
-  "languages": [
-    "python",
-    "r",
-    "matlab",
-    "julia",
-    "nodejs"
-  ],
-  "name": ""
-}
+{"languages": ["python", "r", "matlab", "julia", "node_js"], "name": ""}
