--- a/hard-coded/get-requests-and-images/static-image/static-image-example/config.json
+++ b/hard-coded/get-requests-and-images/static-image/static-image-example/config.json
@@ -1,7 +1,1 @@
-{
-  "languages": [
-    "python",
-    "nodejs"
-  ],
-  "name": "Static Image Export"
-}
+{"languages": ["python", "node_js"], "name": "Static Image Export"}
