--- a/hard-coded/layout/sizing/size-margins/config.json
+++ b/hard-coded/layout/sizing/size-margins/config.json
@@ -1,11 +1,1 @@
-{
-  "languages": [
-    "python", 
-    "r", 
-    "matlab", 
-    "julia", 
-    "nodejs", 
-    "js"
-  ], 
-  "name": "Adjusting Height, Width, and Margins"
-}
+{"languages": ["python", "r", "matlab", "julia", "js", "node_js"], "name": "Adjusting Height, Width, and Margins"}
