--- a/hard-coded/multiple-axes-insets-subplots/subplots/simple-subplot/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/subplots/simple-subplot/config.json
@@ -1,11 +1,1 @@
-{
-  "languages": [
-    "python", 
-    "r", 
-    "matlab", 
-    "julia", 
-    "nodejs", 
-    "js"
-  ], 
-  "name": "Simple Subplot"
-}
+{"languages": ["python", "r", "matlab", "julia", "js", "node_js"], "name": "Simple Subplot"}
