'js' --> 'plotly_js'

--- a/hard-coded/chart-types/bar/bar-marker-array/config.json
+++ b/hard-coded/chart-types/bar/bar-marker-array/config.json
@@ -4,8 +4,8 @@
         "r",
         "matlab",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Customizing Individual Bar Colors"
 }
