--- a/hard-coded/chart-types/box/basic-box-plot/config.json
+++ b/hard-coded/chart-types/box/basic-box-plot/config.json
@@ -4,8 +4,8 @@
         "python",
         "r",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Basic Box Plot"
 }
