--- a/hard-coded/chart-types/line_and_scatter/basic-line/config.json
+++ b/hard-coded/chart-types/line_and_scatter/basic-line/config.json
@@ -3,8 +3,8 @@
         "python",
         "r",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Basic Line Plot"
 }
