--- a/hard-coded/chart-types/mixed/contour-scatter/config.json
+++ b/hard-coded/chart-types/mixed/contour-scatter/config.json
@@ -4,8 +4,8 @@
         "matlab",
         "r",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "A Contour and Scatter Plot <br>of the Method of Steepest Descent"
 }
