--- a/hard-coded/layout/legends/show-legend/config.json
+++ b/hard-coded/layout/legends/show-legend/config.json
@@ -4,8 +4,8 @@
         "matlab",
         "r",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Hiding Legend Entries"
 }
