--- a/hard-coded/multiple-axes-insets-subplots/multiple-axes/multiple-axes-double/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/multiple-axes/multiple-axes-double/config.json
@@ -4,8 +4,8 @@
         "r",
         "julia",
         "matlab",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Two Y-Axes"
 }
