--- a/hard-coded/chart-types/box/box-plot-jitter/config.json
+++ b/hard-coded/chart-types/box/box-plot-jitter/config.json
@@ -4,8 +4,8 @@
         "r",
         "matlab",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Box Plot That Displays the Underlying Data"
 }
