--- a/hard-coded/chart-types/contour/2dhistogram-contour-subplots/config.json
+++ b/hard-coded/chart-types/contour/2dhistogram-contour-subplots/config.json
@@ -5,8 +5,8 @@
         "r",
         "matlab",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "2D Histogram Contour Plot <br>with Histogram Subplots"
 }
