--- a/hard-coded/chart-types/histogram/style-histogram/config.json
+++ b/hard-coded/chart-types/histogram/style-histogram/config.json
@@ -5,8 +5,8 @@
         "r",
         "matlab",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Colored and Styled Histograms"
 }
