--- a/hard-coded/chart-types/histogram2d/2d-histogram-options/config.json
+++ b/hard-coded/chart-types/histogram2d/2d-histogram-options/config.json
@@ -5,8 +5,8 @@
         "r",
         "matlab",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "2D Histogram Binning and Styling Options"
 }
