--- a/hard-coded/chart-types/mixed/bar-line/config.json
+++ b/hard-coded/chart-types/mixed/bar-line/config.json
@@ -4,8 +4,8 @@
         "r",
         "matlab",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Line Chart and a Bar Chart"
 }
