--- a/hard-coded/layout/annotations/hover-chart-basic/config.json
+++ b/hard-coded/layout/annotations/hover-chart-basic/config.json
@@ -4,8 +4,8 @@
         "r",
         "matlab",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Adding Hover Text to Data in Line and Scatter Plots"
 }
