--- a/hard-coded/layout/axes/axes-booleans/config.json
+++ b/hard-coded/layout/axes/axes-booleans/config.json
@@ -4,8 +4,8 @@
         "r",
         "matlab",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Toggling Axes Lines, Ticks, Labels, and Autorange"
 }
