--- a/hard-coded/layout/axes/axes-range-mode/config.json
+++ b/hard-coded/layout/axes/axes-range-mode/config.json
@@ -4,8 +4,8 @@
         "r",
         "matlab",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "<code>nonnegative</code>, <code>tozero</code>, and <code>normal</code> Rangemode"
 }
