--- a/hard-coded/layout/legends/legend-outside/config.json
+++ b/hard-coded/layout/legends/legend-outside/config.json
@@ -4,8 +4,8 @@
         "r",
         "matlab",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Positioning the Legend Outside the Plot"
 }
