--- a/hard-coded/layout/sizing/size-margins/config.json
+++ b/hard-coded/layout/sizing/size-margins/config.json
@@ -4,8 +4,8 @@
         "r",
         "matlab",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Adjusting Height, Width, and Margins"
 }
