--- a/hard-coded/multiple-axes-insets-subplots/subplots/stacked-coupled-subplots/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/subplots/stacked-coupled-subplots/config.json
@@ -4,8 +4,8 @@
         "r",
         "matlab",
         "julia",
-        "js",
-        "node_js"
+        "node_js",
+        "plotly_js"
     ],
     "name": "Stacked Subplots with a Shared X-Axis"
 }
