nodejs -> node_js and js -> plotly_js (for 3d)

--- a/hard-coded/chart-types/3d-line/random-walk/config.json
+++ b/hard-coded/chart-types/3d-line/random-walk/config.json
@@ -4,8 +4,8 @@
         "r",
         "matlab",
         "julia",
-        "nodejs",
-        "js"
+        "plotly_js",
+        "node_js"
     ],
     "name": "3D Line Plot<br>3D Random Walk"
 }
