--- a/hard-coded/chart-types/3d-surface/elevations-3d-surface/config.json
+++ b/hard-coded/chart-types/3d-surface/elevations-3d-surface/config.json
@@ -4,8 +4,8 @@
         "r",
         "matlab",
         "julia",
-        "nodejs",
-        "js"
+        "plotly_js",
+        "node_js"
     ],
     "name": "Topographical 3D Surface Plot"
 }
