--- a/hard-coded/chart-types/3d-scatter/simple-3d-scatter/config.json
+++ b/hard-coded/chart-types/3d-scatter/simple-3d-scatter/config.json
@@ -4,8 +4,8 @@
         "r",
         "matlab",
         "julia",
-        "nodejs",
-        "js"
+        "plotly_js",
+        "node_js"
     ],
     "name": "3D Scatter Plot"
 }
