added descriptions to showcase examples

--- a/hard-coded/showcase/style-controls-subsection-placeholder/config.json
+++ b/hard-coded/showcase/style-controls-subsection-placeholder/config.json
@@ -1,5 +1,6 @@
 {
     "has_thumbnail": false,
     "name": "Style Controls",
+    "description": "Update any aspect of a plot’s appearance on the fly with one simple command.",
     "relative_url": "style-controls"
 }
