--- a/hard-coded/showcase/high-dimension-data-subsection-placeholder/config.json
+++ b/hard-coded/showcase/high-dimension-data-subsection-placeholder/config.json
@@ -1,5 +1,6 @@
 {
     "has_thumbnail": false,
     "name": "High Dimension Data",
+    "description": "Data sets with many correlated fields are too big to display all at once. This demo shows how to let the user change the X and Y data, and demonstrates correlated hover info across plots.",
     "relative_url": "high-dimension-data"
 }
