--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ gems:
 
 baseurl: https://plot.ly
 BASE_URL: https://plot.ly
-oldurl: http://help.plot.ly/documentation/
+staticurl: http://help.plot.ly/documentation/
