--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ gems:
 
 baseurl: https://plot.ly
 BASE_URL: https://plot.ly
-staticurl: https://stage.plot.ly/gh-pages/documentation/static/
+staticurl: https://plot.ly/gh-pages/documentation/static/
