@msund here is a ggplot2 config

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,3 +1,3 @@
 
 staticurl: http://localhost:4000/all_static
-exclude: [_posts/ggplot2, _posts/julia, _posts/matlab, _posts/matplotlib, _posts/nodejs, _posts/r] # [_posts/python,]
+exclude: [_posts/python, _posts/julia, _posts/matlab, _posts/matplotlib, _posts/nodejs, _posts/r]
