add site.url for sitemap ://github.com/jekyll/jekyll-sitemap/blob/master/lib/sitemap.xml#L3

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ gems:
 - jekyll-redirect-from
 - jekyll-sitemap
 
+site: https://plot.ly
 baseurl: https://plot.ly
 BASE_URL: https://plot.ly
 staticurl: https://plot.ly/gh-pages/documentation/static/
