--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ gems:
 
 url: https://plot.ly
 BASE_URL: https://plot.ly
-exclude: [_posts/julia, _posts/ggplot2, _posts/matplotlib, _posts/nodejs, _posts/r]
+exclude: [_posts/julia, _posts/matlab, _posts/matplotlib, _posts/nodejs, _posts/r, _posts/r, _posts/tutorials, _posts/user_guide_python]
 staticurl: https://plot.ly/gh-pages/documentation/static/
