remove double container

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,2 +1,3 @@
 staticurl: http://localhost:4000/all_static
-exclude: [_posts/python, _posts/matlab, _posts/javascript-graphing-library, _posts/julia, _posts/ggplot2, _posts/matplotlib, _posts/nodejs, _posts/r]
+# [ggplot2, julia, matlab, matplotlib, nodejs, plotly_js, python, r, tutorials, user_guide_matlab, user_guide_python, user_guide_r]
+exclude: [_posts/ggplot2, _posts/julia, _posts/matlab, _posts/matplotlib, _posts/nodejs, _posts/plotly_js, _posts/python, _posts/r, _posts/tutorials, _posts/user_guide_matlab, _posts/user_guide_r]
