ugh forgot to remove exclude

--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ gems:
 url: https://plot.ly
 BASE_URL: https://plot.ly
 staticurl: https://plot.ly/gh-pages/documentation/static/
-exclude: [_posts/julia, _posts/nodejs, _posts/matlab, _posts/matplotlib]
+exclude: []
