--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,3 +1,10 @@
 staticurl: http://localhost:4000/all_static
-# [ggplot2, julia, matlab, matplotlib, nodejs, plotly_js, python, r, tutorials, user_guide_matlab, user_guide_python, user_guide_r]
-exclude: [_posts/ggplot2, _posts/julia, _posts/matlab, _posts/matplotlib, _posts/nodejs, _posts/plotly_js, _posts/python, _posts/r, _posts/tutorials, _posts/user_guide_matlab, _posts/user_guide_r]
+# all of the folders: [_posts/ggplot2,_posts/julia,_posts/matlab,_posts/matplotlib,_posts/nodejs,_posts/plotly_js,_posts/python,_posts/r,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
+exclude: [_posts/ggplot2,_posts/julia,_posts/matlab,_posts/matplotlib,_posts/nodejs,_posts/plotly_js,_posts/python,_posts/r,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
+
+kramdown:
+  input: GFM
+
+markdown: redcarpet
+redcarpet:
+  extensions: ["tables", "fenced_code_blocks"]
