--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,7 @@ gems:
 url: https://plot.ly
 BASE_URL: https://plot.ly
 staticurl: https://plot.ly/gh-pages/documentation/static/
-exclude: []
+exclude: [_posts/temp]
+
+kramdown:
+  input: GFM
