--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,7 @@ exclude: [_posts/temp, '*.Rmd',]
 
 kramdown:
   input: GFM
+
+markdown: redcarpet
+redcarpet:
+  extensions: ["tables", "fenced_code_blocks"]
