templated dashboard pages, better home page

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,6 +1,6 @@
 staticurl: http://localhost:4000/all_static
 # all of the folders: ['*.Rmd',posts/ggplot2,_posts/julia,_posts/matlab,_posts/matplotlib,_posts/nodejs,_posts/plotly_js,_posts/python,_posts/r,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
-exclude: ['*.Rmd',_posts/ggplot2,_posts/julia,_posts/matlab,_posts/matplotlib,_posts/nodejs,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
+exclude: ['*.Rmd',_posts/ggplot2,_posts/julia,_posts/matplotlib,_posts/nodejs,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
 # all of the folders: [_posts/ggplot2,_posts/julia,_posts/matlab,_posts/matplotlib,_posts/nodejs,_posts/plotly_js,_posts/python,_posts/r,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
 
 kramdown:
