--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ BASE_URL: https://plot.ly
 staticurl: https://plot.ly/gh-pages/documentation/static/
 exclude: [_posts/temp, '*.Rmd',]
 
+offline_price: 249
+
 kramdown:
   input: GFM
 markdown: redcarpet
