--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -3,6 +3,8 @@ staticurl: http://localhost:4000/all_static
 exclude: ['*.Rmd',_posts/ggplot2,_posts/julia,_posts/matplotlib,_posts/nodejs,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
 # all of the folders: [_posts/ggplot2,_posts/julia,_posts/matlab,_posts/matplotlib,_posts/nodejs,_posts/plotly_js,_posts/python,_posts/r,_posts/tutorials,_posts/user_guide_matlab,_posts/user_guide_python,_posts/user_guide_r]
 
+offline_price: 249
+
 kramdown:
   input: GFM
 
