consolidate plotly.js versions

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ exclude: [_posts/temp, '*.Rmd',]
 
 offline_price: 249
 plotlyjs_download_url: http://d14fo0winaifog.cloudfront.net/plotlyjs_basic.zip
+plotlyjs_version: 20150819b
 
 kramdown:
   input: GFM
