--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ BASE_URL: https://plot.ly
 staticurl: https://plot.ly/gh-pages/documentation/static/
 exclude: [_posts/temp, '*.Rmd',]
 
-plotlyjs_download_url: hhttp://cdn.plot.ly/plotly-latest.min.js
+plotlyjs_download_url: http://cdn.plot.ly/plotly-latest.min.js
 
 kramdown:
   input: GFM
