sync up config and prod gems

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,5 +1,7 @@
 gems:
 - jekyll-redirect-from
+- jekyll-sitemap
+- jemoji
 
 BASE_URL: http://localhost:4000
 staticurl: http://localhost:4000/all_static
