Migrated thumbnails for Python docs to Plotly CDN.

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -9,6 +9,7 @@ exclude: ['*.Rmd','_posts/2015-09-09-matlab-reference.html','_posts/2015-08-19-p
 offline_price: 249
 plotlyjs_version: 20150819b
 plotlyjs_download_url: http://d14fo0winaifog.cloudfront.net/plotlyjs_basic.zip
+imgurl: http://images.plot.ly/plotly-documentation/
 
 kramdown:
   input: GFM
