--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ url: https://plot.ly
 BASE_URL: https://plot.ly
 staticurl: https://plot.ly/gh-pages/documentation/static/
 exclude: [_posts/temp, '*.Rmd',]
+imgurl: http://images.plot.ly/plotly-documentation/
 
 offline_price: 249
 plotlyjs_download_url: http://d14fo0winaifog.cloudfront.net/plotlyjs_basic.zip
