Added CDN links for Julia examples

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: https://plot.ly
 BASE_URL: https://plot.ly
 staticurl: https://plot.ly/gh-pages/documentation/static/
 exclude: [_posts/temp, '*.Rmd',]
-imgurl: https://images.plot.ly/plotly-documentation/
+imgurl: http://images.plot.ly/plotly-documentation/
 
 plotlyjs_download_url: https://cdn.plot.ly/plotly-latest.min.js
 
