--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ gems:
 - jekyll-sitemap
 #- jemoji
 
-url: https://plot.ly
-BASE_URL: https://plot.ly
+url: http://api.plotly.ineffable.co
+BASE_URL: http://api.plotly.ineffable.co
 staticurl: https://plot.ly/gh-pages/documentation/static/
 exclude: [_posts/temp, '*.Rmd',]
 imgurl: https://images.plot.ly/plotly-documentation/
