404 and ref page edits

--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,30 @@
 gems:
 - jekyll-redirect-from
 - jekyll-sitemap
-#- jemoji
 
-url: http://api.plotly.ineffable.co
-BASE_URL: http://api.plotly.ineffable.co
+# ---
+# Define URLs
+# ---
+url: https://plot.ly
+BASE_URL: https://plot.ly
 staticurl: https://plot.ly/gh-pages/documentation/static/
 
-stylesheet:   https://s3-us-west-1.amazonaws.com/plotly-tutorials/assets/css/api/main.css
-
-exclude: [_posts/temp, '*.Rmd',]
+# ---
+# Assets
+# ---
 imgurl: https://images.plot.ly/plotly-documentation/
-
+stylesheet: https://s3-us-west-1.amazonaws.com/plotly-tutorials/assets/css/api/main.css
 plotlyjs_download_url: https://cdn.plot.ly/plotly-latest.min.js
 
+
+# ---
+# Excludes
+# ---
+exclude: [_posts/temp, '*.Rmd']
+
+# ---
+# Markdown / Syntax
+# ---
 kramdown:
   input: GFM
 markdown: redcarpet
