save and use css from /all_static/css/ instead of aws

--- a/_data/cache_bust_css.yml
+++ b/_data/cache_bust_css.yml
@@ -1,2 +1,2 @@
-b626dce1a7b71ea21e8e698a80463f5e  ../styles/main.css
-a5765df8bc2358dd61c19edcc0cbef7d  ../styles/normalize.css
+b626dce1a7b71ea21e8e698a80463f5e  ../all_static/css/main.css
+a5765df8bc2358dd61c19edcc0cbef7d  ../all_static/css/normalize.css
