--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -9,7 +9,7 @@ url: http://localhost:4000
 BASE_URL: http://localhost:4000
 staticurl: http://localhost:4000/all_static
 imgurl: https://images.plot.ly/plotly-documentation/
-stylesheet: /styles/main.css
+#stylesheet: /styles/main.css
 plotlyjs_download_url: https://cdn.plot.ly/plotly-latest.min.js
 
 
